# wordfeud-solver

./: .gitignore  Cargo.toml  README.md  TODO.md
benches/: bench_board.rs  bench_wordlist.rs
examples/: wordlist.rs  wordtest.rs
lib/: Cargo.toml
lib/benches/: bench_board.rs  bench_wordlist.rs
lib/examples/: best_scores.rs  connectdata.rs  wordlist.rs  wordtest.rs
lib/src/: ai.rs  board.rs  error.rs  grid.rs  labelset.rs  lib.rs  main.rs  tilebag.rs  tiles.rs  tilesets.rs  wordlist.rs
lib/src/tiles/: cell.rs  codec.rs  codes.rs  item.rs  items.rs  letter.rs  list.rs  tile.rs
lib/src/tilesets/: en.rs  nl.rs
lib/src/wordlist/: matches.rs  trievec.rs
pylib/: Cargo.toml  README.md  build-cross.sh  pyproject.toml
pylib/examples/: testocr.py  testwordfeud.py
pylib/src/: lib.rs
src/: board.rs  codec.rs  error.rs  grid.rs  labelset.rs  lib.rs  test.rs  tiles.rs  tilesets.rs  wordlist.rs
src/tiles/: items.rs  letter.rs  list.rs
src/tilesets/: se.rs
src/wordlist/: matches.rs
wordlists/: words.txt
