[package]
name = "wordfeud-solver"
description = "A Rust library to evaluate all possible moves given a wordfeud board and rack."
license = "MIT OR Apache-2.0"
readme = "../README.md"
version = "0.3.2"
authors = ["Joep Jansen <joep.w.jansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tinyvec = "1.0"
multiset = "0.0.5"
rand =  "0.8"
bitintr = { version = "0.3", optional = true }
rayon = { version = "1.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional= true }
bincode = { version = "1.3", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
bitintr = "0.3"

[dev-dependencies]
criterion = "0.3"
anyhow = "1.0"

[features]
# default = ["rayon", "serde", "bincode"]
default = ["rayon"]


[[bench]]
name = "bench_wordlist"
harness = false

[[bench]]
name = "bench_board"
harness = false
