[package]
name = "pywordfeud-solver"
version = "0.3.1"
authors = ["Joep Jansen <joep.w.jansen@gmail.com>"]
edition = "2018"

[dependencies]
wordfeud-solver = { path = "../lib" }

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]

[lib]
name = "pywordfeud_solver"
path = "src/lib.rs"
crate-type = ["cdylib"]